# datum-explorer

./: .gitignore  README.md  biome.json  bun.lockb  package-lock.json  package.json  tsconfig.json  turbo.json
.github/workflows/: deploy-app.yml  mirror.yml  test.yml
app/: .env.test  Dockerfile  next.config.ts  package.json  turbo.json  vitest.config.ts
app/src/: config.ts  constants.ts  middleware.ts  theme.ts  types.ts
app/test/: utils.tsx
cbor-parser/: package.json  rollup.config.js  tsconfig.json
cbor-parser/src/: helpers.ts  index.ts  parseCbor.ts
cbor-parser/test/: parseCbor.test.ts
cddl-from-src/: package.json  rollup.config.js  tsconfig.json
cddl-from-src/crate/: Cargo.toml
cddl-from-src/src/: cddlFromSrc.ts  cddlSchema.ts  index.ts  parseCddlAst.ts
cddl-from-src/test/: cddlFromSrc.test.ts  cddlSchema.test.ts  launchpad_node.ast.json  launchpad_node.cddl  wingridersLaunchpadNode.ast.json  wingridersRequestV2.ast.json
docker/: .env.example  docker-compose.yml
docs/: app-manual.md  architecture.md  cddlDatumSchemaDesign.md  research.md
extensions/: technicalOutline.md
extensions/architecture/: diagrams.md
lib/: README.md  package.json  rollup.config.js  tsconfig.json
lib/src/: cddlFromSrc.ts  cli.ts  common.ts  decodeCbor.ts  errors.ts  helpers.ts  index.ts  matchCddlWithCbor.ts  parseCbor.ts  readableDatumTypes.ts  types.ts  validateCddl.ts
lib/test/: cddlFromSrc.test.ts  common.test.ts  decodeCbor.test.ts  helpers.test.ts  matchCddlWithCbor.test.ts  (+4 more)
manual-tests/: datum-explorer.feature  datum-explorer.freature  report.md
(+159 files in other folders)
